--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
           <div class="animation"><img src="images/return.png" alt="return button" class="return" /></div>
         </section>
         <section class="game-action">
-          <div class="box" value="1"></div>
-          <div class="box" value="2"></div>
-          <div class="box" value="3"></div>
-          <div class="box" value="4"></div>
-          <div class="box" value="5"></div>
-          <div class="box" value="6"></div>
-          <div class="box" value="7"></div>
-          <div class="box" value="8"></div>
-          <div class="box" value="9"></div>
+          <div class="box" id="box0"></div>
+          <div class="box" id="box1"></div>
+          <div class="box" id="box2"></div>
+          <div class="box" id="box3"></div>
+          <div class="box" id="box4"></div>
+          <div class="box" id="box5"></div>
+          <div class="box" id="box6"></div>
+          <div class="box" id="box7"></div>
+          <div class="box" id="box8"></div>
         </section>
         <!-- Score contents -->
         <section class="score">
